Fix spacing issue in lined headings

--- a/assets/stylesheets/components/_content.scss
+++ b/assets/stylesheets/components/_content.scss
@@ -163,6 +163,8 @@
   justify-content: center;
   align-items: center;
 
+  > * { margin: 0 .3125rem; }
+
   &:after {
     content: '';
     display: inline-block;
